--- a/world.html
+++ b/world.html
@@ -27,10 +27,10 @@
                         <a class="nav-link active" href="index.html">Inicio</a>
                     </li>
                     <li>
-                        <a class="nav-link active" href="world.html">Nuestro mundo</a>
+                        <a class="nav-link active" href="world.html">Sala de cuentos</a>
                     </li>
                     <li>
-                        <a class="nav-link active" href="#">Sala de juegos</a>
+                        <a class="nav-link active" href="playgame.html">Sala de juegos</a>
                     </li>
 
                     <li>
@@ -59,9 +59,8 @@
                 <p>Los niños ven el mundo de forma diferente. Donde nosotros vemos un charco de agua, ellos ven un océano que espera ser atravesado.</p>
                 <button class="btn__pro">Empezar ahora</button>
             </div>
-            <div class="column__img"><img src="img/world.png"></div>
+            <div class="column__img"><img src="img/index-3d-world.png"></div>
         </div>
-        <svg class="wave" class="transition duration-300 ease-in-out delay-150" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#FFE3E4" fill-opacity="1" d="M0,224L60,197.3C120,171,240,117,360,90.7C480,64,600,64,720,69.3C840,75,960,85,1080,80C1200,75,1320,53,1380,42.7L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
     
     </section>
 
